# galactoPINNs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bayesian_model.py  conftest.py  data_generation.py  data_processing.py  evaluate.py  layers.py  node_model.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  static_model.py  train.py
.github/workflows/: ci.yaml
examples/: mw_lmc_example.ipynb  rotating_bar_example.ipynb  time_dep_example.ipynb
src/: .gitignore
src/galactoPINNs/: __init__.py  bayesian_model.py  bayesian_tools.py  data.py  evaluate.py  inference.py  layers.py  model_potential.py  node_model.py  orbit_tools.py  static_model.py  train.py
src/galactoPINNs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/galactoPINNs/models/: __init__.py  bayesian_model.py  node_model.py  static_model.py
tests/: test_imports.py  test_inference.py  test_layers.py  test_models.py  test_train.py
