[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "galactoPINNs"
version = "0.1.0"
authors = [{name = "Charlotte Myers", email = "charlottemyers.cem@gmail.com"}]
description = "Physics-informed neural networks for modeling galactic gravitational potentials."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "jax",
    "flax",
    "numpyro",
    "astropy",
    "equinox",
    "jaxtyping",
    "xmmutablemap",
    "unxt",
    "galax",
]


[project.urls]
Homepage = "https://github.com/charlottemyers/galactoPINNs"


[project.optional-dependencies]
dev = ["pytest"]
bnn = ["numpyro"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
