[project]
authors = [{ name = "Charlotte Myers", email = "charlottemyers.cem@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "galax",
  "numpy>=2.3.5",
  "unxt>=1.7.0,<1.8.0",
  "xmmutablemap>=0.2.1",
  "jaxtyping>=0.3.6",
  "equinox>=0.13.3",
  "astropy>=7.2.0",
  "numpyro>=0.19.0",
  "flax>=0.12.2",
  "jax>=0.8.2",
]
description = "Physics-informed neural networks for modeling galactic gravitational potentials."
dynamic = ["version"]
license.file = "LICENSE"
name = "galactoPINNs"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/charlottemyers/galactoPINNs"


[build-system]
build-backend = "hatchling.build"
requires      = ["hatch-vcs", "hatchling"]


[dependency-groups]
dev = [
  "pytest>=8.3",
  "pre-commit>=4.1.0",
  "nox>=2024.10.9",
  "sybil[pytest]>=9.2.0",
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.8",
  "cz-conventional-gitmoji>=0.6.1",
]


[tool.hatch]
build.hooks.vcs.version-file = "src/galactoPINNs/_version.py"
build.hooks.vcs.version-file-template = """\
version: str = {version!r}
version_tuple: tuple[int, int, int] | tuple[int, int, int, str, str]
version_tuple = {version_tuple!r}
"""
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[tool.codespell]
skip = ["uv.lock", "*.ipynb"]


[tool.commitizen]
name = "cz_gitmoji"


[tool.pytest.ini_options]
addopts = [
  "--showlocals",
  "--strict-config",
  "--strict-markers",
  "-p no:doctest",    # using sybil
  "-ra",
]
filterwarnings = ["error"]
log_level = "INFO"
minversion = "8.3"
testpaths = ["README.md", "src/", "tests/"]
xfail_strict = true


[tool.repo-review]
ignore = ["MY100", "PC140", "PY004"]


[tool.ruff]
extend-exclude = ["**/_version.py"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "COM812",  # <- for ruff.format
  "D103",    # Missing docstring in public function  # TODO: resolve
  "D105",    # Missing docstring in magic method
  "D107",    # Missing docstring in __init__
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "EM101",   # Exception must not use a string literal
  "ERA001",  # Commented out code
  "F722",    # Syntax error in forward annotation <- jaxtyping
  "F821",    # undefined name '...'  <- jaxtyping
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with formatter
  "N802",    # Function name should be lowercase
  "N803",    # Argument name should be lowercase
  "N806",    # Variable in function should be lowercase
  "N999",    # Invalid module name (galactoPINNs is intentional)
  "PD",      # Pandas
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "S101",    # Use of assert detected
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"**tests/**"  = ["ANN", "E731", "INP001", "S101", "SLF001", "T20"]
"__init__.py" = ["F403"]
"examples/**" = ["E501", "N816"]

[tool.ruff.lint.isort]
combine-as-imports     = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv.sources]
galax = { git = "https://github.com/GalacticDynamics/galax" }
