[metadata]
name = galactoPINNs
version = 0.1.0
author = Charlotte Myers
description = Physics-informed neural networks for modeling galactic gravitational potentials.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/charlottemyers/galactoPINNs
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = src
install_requires =
    numpy

# [options.extras_require]
# dev =
#     pytest

[options.package_data]
* = *.txt, *.md

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
bnn =
    numpyro
